# NewApproachProgramming

./: DateRange.hpp  Design.md  LogEntry.hpp  LogProcessor.cpp  LogProcessor.hpp  README.md  REPORT.md  SETUP.md  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  ZipExtractor.cpp  build.bat  compile_env.bat  extract_logs.bat  json_adapter.cpp  main.cpp  maintesting.cpp  process_all_logs.cpp  simple_client.cpp  simple_server.cpp  test_parse.cpp
LogFiles/: TeSTING.txt
SimpleTest/: simple.json
TestLog/: sample.json  single_log.json
src/: CMakeLists.txt  ISSUES.md  LogEntry.cpp  LogEntry.hpp  LogProcessor.cpp  LogProcessor.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  main.cpp
